Fixed some small mistakes. Still some errors to solve

--- a/pyavd/gpkit_test.ipynb
+++ b/pyavd/gpkit_test.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -25,30 +25,30 @@
       "-----------\n",
       " Mission\n",
       "  \"fuel constraints\":\n",
-      "    Wfuel[:-1] ≥ Wfuel[1:] + Wburn[:-1]\n",
-      "    Wfuel[3] ≥ Wburn[3]\n",
+      "    Wfuel[:-1] >= Wfuel[1:] + Wburn[:-1]\n",
+      "    Wfuel[3] >= Wburn[3]\n",
       "\n",
       "  FlightSegment\n",
       "   AircraftP\n",
-      "    Wburn[:] ≥ 0.1·D[:]\n",
-      "    Aircraft.W + Wfuel[:] ≤ 0.5·rho[:]·CL[:]·S·V[:]²\n",
+      "    Wburn[:] >= 0.1*D[:]\n",
+      "    Aircraft.W + Wfuel[:] <= 0.5*rho[:]*CL[:]*S*V[:]^2\n",
       "    \"performance\":\n",
       "      WingAero\n",
-      "       D[:] ≥ 0.5·rho[:]·V[:]²·CD[:]·S\n",
-      "       Re[:] = rho[:]·V[:]·c/mu[:]\n",
-      "       CD[:] ≥ 0.074/Re[:]^0.2 + CL[:]²/π/A/e[:]\n",
+      "       D[:] >= 0.5*rho[:]*V[:]^2*CD[:]*S\n",
+      "       Re[:] = rho[:]*V[:]*c/mu[:]\n",
+      "       CD[:] >= 0.074/Re[:]^0.2 + CL[:]^2/PI/A/e[:]\n",
       "\n",
       "   FlightState\n",
       "    (no constraints)\n",
       "\n",
       " Aircraft\n",
-      "  Aircraft.W ≥ Aircraft.Fuselage.W + Aircraft.Wing.W\n",
+      "  Aircraft.W >= Aircraft.Fuselage.W + Aircraft.Wing.W\n",
       "  Fuselage\n",
       "   (no constraints)\n",
       "\n",
       "  Wing\n",
       "   c = (S/A)^0.5\n",
-      "   Aircraft.Wing.W ≥ S·Aircraft.Wing.rho\n"
+      "   Aircraft.Wing.W >= S*Aircraft.Wing.rho\n"
      ]
     }
    ],
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -293,20 +293,13 @@
       "\n",
       "Free Variables\n",
       "--------------\n",
-      "      | Mission.FlightSegment.AircraftP.WingAero\n",
-      "    D : [ 2.74      2.73      2.72      2.72     ]  [lbf] drag force\n",
+      "  | Aircraft.Wing\n",
+      "S : 44.14  [ft**2] surface area\n",
+      "W : 44.14  [lbf]   weight\n",
+      "c : 1.279  [ft]    mean chord\n",
       "\n",
-      "      | Mission.FlightSegment.AircraftP\n",
-      "Wburn : [ 0.274     0.273     0.272     0.272    ]  [lbf] segment fuel burn\n",
-      "Wfuel : [ 1.09      0.817     0.544     0.272    ]  [lbf] fuel weight\n",
-      "\n",
-      "      | Aircraft.Wing\n",
-      "    S : 44.14                                       [ft²] surface area\n",
-      "    W : 44.14                                       [lbf] weight\n",
-      "    c : 1.279                                       [ft]  mean chord\n",
-      "\n",
-      "      | Aircraft\n",
-      "    W : 144.1                                       [lbf] weight\n",
+      "  | Aircraft\n",
+      "W : 144.1  [lbf]   weight\n",
       "\n",
       "Variable Sensitivities\n",
       "----------------------\n",
@@ -329,40 +322,31 @@
       "Most Sensitive Constraints\n",
       "--------------------------\n",
       "       | Aircraft\n",
-      "  +1.4 : .W ≥ .Fuselage.W + .Wing.W\n",
+      "  +1.4 : .W >= .Fuselage.W + .Wing.W\n",
       "\n",
       "       | Mission\n",
-      "    +1 : Wfuel[0] ≥ Wfuel[1] + Wburn[0]\n",
-      " +0.75 : Wfuel[1] ≥ Wfuel[2] + Wburn[1]\n",
-      "  +0.5 : Wfuel[2] ≥ Wfuel[3] + Wburn[2]\n",
+      "    +1 : Wfuel[0] >= Wfuel[1] + Wburn[0]\n",
+      " +0.75 : Wfuel[1] >= Wfuel[2] + Wburn[1]\n",
+      "  +0.5 : Wfuel[2] >= Wfuel[3] + Wburn[2]\n",
       "\n",
       "       | Aircraft.Wing\n",
-      " +0.43 : .W ≥ S·.rho\n",
+      " +0.43 : .W >= S*.rho\n",
       "\n",
-      "Insensitive Constraints |below +1e-05|\n",
-      "--------------------------------------\n",
-      "(none)\n",
-      "\n",
-      "Solution Diff (for selected variables)\n",
-      "======================================\n",
-      "(argument is the baseline solution)\n",
-      "\n",
-      "Constraint Differences\n",
-      "**********************\n",
-      "@@ -31,3 +31,4 @@\n",
-      "   Wing\n",
-      "    c = (S/A)^0.5\n",
-      "    Aircraft.Wing.W ≥ S·Aircraft.Wing.rho\n",
-      "+ Wburn[:] ≥ 0.2·D[:]\n",
-      "\n",
-      "**********************\n",
-      "\n",
-      "Relative Differences |above 1%|\n",
-      "-------------------------------\n",
-      "Wburn : [ +102.1%   +101.6%   +101.1%   +100.5%  ] segment fuel burn\n",
-      "Wfuel : [ +101.3%   +101.1%   +100.8%   +100.5%  ] fuel weight\n",
-      "    D : [   +1.1%       -         -         -    ] drag force\n",
-      "\n"
+      "Making Sankey diagrams requires the ipysankeywidget package\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'C:\\\\Python\\\\Python39\\\\lib\\\\site-packages\\\\gpkit\\\\interactive\\\\referencesplot.html'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_3104/4060125275.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mgpkit\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minteractive\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreferences\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mreferencesplot\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 33\u001b[1;33m \u001b[0mreferencesplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mM\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mopenimmediately\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mC:\\Python\\Python39\\lib\\site-packages\\gpkit\\interactive\\references.py\u001b[0m in \u001b[0;36mreferencesplot\u001b[1;34m(model, openimmediately)\u001b[0m\n\u001b[0;32m     80\u001b[0m     \u001b[0mhtmlfile\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"referencesplot.html\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     81\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misfile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhtmlfile\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 82\u001b[1;33m         \u001b[0mshutil\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdirname\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m__file__\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mhtmlfile\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mhtmlfile\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     83\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     84\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mopenimmediately\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\Python\\Python39\\lib\\shutil.py\u001b[0m in \u001b[0;36mcopy\u001b[1;34m(src, dst, follow_symlinks)\u001b[0m\n\u001b[0;32m    416\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdst\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    417\u001b[0m         \u001b[0mdst\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdst\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbasename\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msrc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 418\u001b[1;33m     \u001b[0mcopyfile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msrc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdst\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfollow_symlinks\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfollow_symlinks\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    419\u001b[0m     \u001b[0mcopymode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msrc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdst\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfollow_symlinks\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfollow_symlinks\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    420\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mdst\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\Python\\Python39\\lib\\shutil.py\u001b[0m in \u001b[0;36mcopyfile\u001b[1;34m(src, dst, follow_symlinks)\u001b[0m\n\u001b[0;32m    262\u001b[0m         \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msymlink\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreadlink\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msrc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdst\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    263\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 264\u001b[1;33m         \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msrc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'rb'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mfsrc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdst\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'wb'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mfdst\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    265\u001b[0m             \u001b[1;31m# macOS\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    266\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0m_HAS_FCOPYFILE\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'C:\\\\Python\\\\Python39\\\\lib\\\\site-packages\\\\gpkit\\\\interactive\\\\referencesplot.html'"
      ]
     }
    ],
@@ -404,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
