--- a/pyavd/Models/Performance/test.ipynb
+++ b/pyavd/Models/Performance/test.ipynb
@@ -6,18 +6,42 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unindent does not match any outer indentation level (<parse_variables>, line 12)",
-     "output_type": "error",
-     "traceback": [
-      "Traceback \u001b[1;36m(most recent call last)\u001b[0m:\n",
-      "  File \u001b[0;32m\"C:\\Python\\Python39\\lib\\site-packages\\IPython\\core\\interactiveshell.py\"\u001b[0m, line \u001b[0;32m3444\u001b[0m, in \u001b[0;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \u001b[0;32m\"C:\\Users\\gabis\\AppData\\Local\\Temp/ipykernel_5484/1049990917.py\"\u001b[0m, line \u001b[0;32m1\u001b[0m, in \u001b[0;35m<module>\u001b[0m\n    from Segments import Takeoff, Climb, Landing\n",
-      "  File \u001b[0;32m\"c:\\Users\\gabis\\Downloads\\Conceptual-Design\\pyavd\\Models\\Performance\\Segments.py\"\u001b[0m, line \u001b[0;32m107\u001b[0m, in \u001b[0;35m<module>\u001b[0m\n    class Landing(Model):\n",
-      "  File \u001b[0;32m\"c:\\Users\\gabis\\Downloads\\Conceptual-Design\\pyavd\\Models\\Performance\\Segments.py\"\u001b[0m, line \u001b[0;32m117\u001b[0m, in \u001b[0;35mLanding\u001b[0m\n    def setup(self,aircraft=None,CL_max=2.1):\n",
-      "  File \u001b[0;32m\"C:\\Python\\Python39\\lib\\site-packages\\gpkit\\tools\\docstring.py\"\u001b[0m, line \u001b[0;32m104\u001b[0m, in \u001b[0;35m__call__\u001b[0m\n    new_ast = ast.parse(new_src, \"<parse_variables>\")\n",
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Python\\Python39\\lib\\ast.py\"\u001b[1;36m, line \u001b[1;32m50\u001b[1;36m, in \u001b[1;35mparse\u001b[1;36m\u001b[0m\n\u001b[1;33m    return compile(source, filename, mode, flags,\u001b[0m\n",
-      "\u001b[1;36m  File \u001b[1;32m\"<parse_variables>\"\u001b[1;36m, line \u001b[1;32m12\u001b[0m\n\u001b[1;33m    try:\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unindent does not match any outer indentation level\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Takeoff\n",
+      "=======\n",
+      "\n",
+      "Constraints\n",
+      "-----------\n",
+      "  \"Takeoff Parameter\":\n",
+      "    TOP = FL/k\n",
+      "  \"Lift Coeffcient | Takeoff\":\n",
+      "    CL_max_TO = 1.92\n",
+      "  \"Thrust to Weight constraint\":\n",
+      "    TW = WS/(CL_max_TO·g·TOP/1.21)\n",
+      "Climb\n",
+      "=====\n",
+      "\n",
+      "Constraints\n",
+      "-----------\n",
+      "  \"Initial CL|Climb\":\n",
+      "    CL = 1.92\n",
+      "  \"Drag Coefficient at Climb\":\n",
+      "    CD ≥ Cd0_climb + CL²/(π·AR·e_climb)\n",
+      "  \"Lift-Drag Ratio at Climb\":\n",
+      "    LD = CL/CD\n",
+      "  \"Thrust to Weight constraint\":\n",
+      "    TW ≥ 1/LD + 0.001\n",
+      "Landing\n",
+      "=======\n",
+      "\n",
+      "Constraints\n",
+      "-----------\n",
+      "  \"Target Stall Speed\":\n",
+      "    V_stall = (FL/k)^0.5\n",
+      "  \"Max Wing Loading\":\n",
+      "    WS ≤ 0.5·SL_density·V_stall²·2.1\n"
      ]
     }
    ],
@@ -26,7 +50,7 @@
     "\n",
     "t = Takeoff()\n",
     "c = Climb(0.04, 0.05, 0.1, goAround=False)\n",
-    "l - Landing()\n",
+    "l = Landing()\n",
     "\n",
     "\n",
     "print(t)\n",
