--- a/pyavd/gpkit_test.ipynb
+++ b/pyavd/gpkit_test.ipynb
@@ -9,6 +9,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from gpkit import Model, ureg\n",
+    "from gpkit.interactive.sankey import Sankey\n",
+    "from gpkit.constraints.bounded import Bounded\n",
+    "from Models import *\n",
+    "import gpkit.interactive\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# with gpkit.SignomialsEnabled():\n",
+    "\n",
+    "#     AC = Aircraft()\n",
+    "#     # print(AC)\n",
+    "\n",
+    "#     MISSION = Mission(AC)\n",
+    "#     # print(MISSION)\n",
+    "\n",
+    "#     M = Model(AC.M_0 * AC.T0_W0, [Bounded(MISSION), Bounded(AC)])\n",
+    "#     print(M)\n",
+    "\n",
+    "#     print(M.variables_byname('AR'))\n",
+    "\n",
+    "#     sol = M.localsolve(verbosity=1)\n",
+    "#     print(sol.table())\n",
+    "\n",
+    "#     print(M.program.results)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -23,14 +62,15 @@
       "\n",
       "Constraints\n",
       "-----------\n",
-      " Mission1\n",
+      " Mission\n",
+      "  M_fuel = 0.0642·M_0\n",
       "  Takeoff\n",
       "   \"Takeoff Parameter\":\n",
-      "     TOP = Mission1.Takeoff.FL/Mission1.Takeoff.k\n",
+      "     TOP = Mission.Takeoff.FL/Mission.Takeoff.k\n",
       "   \"Lift Coeffcient | Takeoff\":\n",
       "     CL_max_TO = 1.92\n",
       "   \"Thrust to Weight constraint\":\n",
-      "     T0_W0 ≥ W0_S/(CL_max_TO·Mission1.Takeoff.g·TOP/1.21)\n",
+      "     T0_W0 ≥ W0_S/(CL_max_TO·Mission.Takeoff.g·TOP/1.21)\n",
       "   \"Boundaries\":\n",
       "     \"Minimum Wing Loading\":\n",
       "       W0_S ≥ 0.1\n",
@@ -39,29 +79,29 @@
       "\n",
       "  Climb\n",
       "   \"Initial CL|Climb\":\n",
-      "     Mission1.Climb.CL = 1.92\n",
+      "     Mission.Climb.CL = 1.92\n",
       "   \"Thrust to Weight constraint\":\n",
-      "     T0_W0 ≥ (Mission1.Climb.Cd0_climb + Mission1.Climb.CL²/(23.6·Mission1.Climb.e_climb))/Mission1.Climb.CL + 0.001\n",
+      "     T0_W0 ≥ (Mission.Climb.Cd0_climb + Mission.Climb.CL²/(23.6·Mission.Climb.e_climb))/Mission.Climb.CL + 0.001\n",
       "   \"Boundaries\":\n",
-      "     Mission1.Climb.Cd0_climb ≥ 1e-06\n",
+      "     Mission.Climb.Cd0_climb ≥ 1e-06\n",
       "     T0_W0 ≤ 1\n",
       "\n",
       "  Climb_GoAround\n",
       "   \"Go-around CL|CLimb\":\n",
-      "     Mission1.Climb_GoAround.CL = 2.1\n",
+      "     Mission.Climb_GoAround.CL = 2.1\n",
       "   \"Thrust to Weight constraint\":\n",
-      "     T0_W0 ≥ (Mission1.Climb_GoAround.Cd0_climb + Mission1.Climb_GoAround.CL²/(23.6·Mission1.Climb_GoAround.e_climb))/Mission1.Climb_GoAround.CL + 0.001\n",
+      "     T0_W0 ≥ (Mission.Climb_GoAround.Cd0_climb + Mission.Climb_GoAround.CL²/(23.6·Mission.Climb_GoAround.e_climb))/Mission.Climb_GoAround.CL + 0.001\n",
       "   \"Boundaries\":\n",
-      "     Mission1.Climb_GoAround.Cd0_climb ≥ 1e-06\n",
+      "     Mission.Climb_GoAround.Cd0_climb ≥ 1e-06\n",
       "     T0_W0 ≤ 1\n",
       "\n",
       "  Landing\n",
       "   \"Target Stall Speed\":\n",
-      "     V_stall = (Mission1.Landing.FL/Mission1.Landing.k)^0.5\n",
+      "     V_stall = (Mission.Landing.FL/Mission.Landing.k)^0.5\n",
       "   \"Max Wing Loading\":\n",
       "     W0_S ≤ 0.5·SL_density·V_stall²·2.1\n",
       "\n",
-      " Aircraft1\n",
+      " Aircraft\n",
       "  \"Dry Mass\":\n",
       "    M_dry ≥ M\n",
       "  \"Total Mass\":\n",
@@ -79,129 +119,114 @@
       "     M_luggage = m_luggage·4\n",
       "   \"Total Payload\":\n",
       "     M ≥ M_pax + M_luggage\n",
-      "[]\n",
       "Using solver 'cvxopt'\n",
       " for 15 free variables\n",
-      "  in 31 posynomial inequalities.\n",
-      "Solving took 0.0393 seconds.\n",
+      "  in 33 posynomial inequalities.\n",
+      "Solving took 0.0802 seconds.\n",
       "\n",
       "Optimal Cost\n",
       "------------\n",
-      " 76.61\n",
+      " 147.6\n",
+      "\n",
+      "~~~~~~~~\n",
+      "WARNINGS\n",
+      "~~~~~~~~\n",
+      "Unexpectedly Loose Constraints\n",
+      "------------------------------\n",
+      "              | Aircraft\n",
+      "1144 >= 899.8 : M_dry ≥ M\n",
+      " 1557 >= 1244 : M_0 ≥ M_fuel + M_dry\n",
+      "\n",
+      "              | Aircraft.Payload\n",
+      " 899.8 >= 708 : M ≥ M_pax + M_luggage\n",
+      "~~~~~~~~\n",
       "\n",
       "Model Sensitivities (sorts models in sections below)\n",
       "-------------------\n",
-      "  +3.0 : Mission1.Climb_GoAround\n",
-      "  +2.6 : Aircraft1.Payload\n",
-      "  +2.0 : Aircraft1\n",
-      " <1e-9 : Mission1.Climb\n",
-      "<1e-10 : Mission1.Takeoff\n",
-      "<1e-11 : Mission1.Landing\n",
+      "  +3.0 : Mission.Climb_GoAround\n",
+      "  +1.0 : Aircraft\n",
+      "       : Mission\n",
+      " <1e-9 : Mission.Climb\n",
+      "       : Aircraft.Payload\n",
+      "<1e-10 : Mission.Takeoff\n",
+      "<1e-11 : Mission.Landing\n",
       "\n",
       "Free Variables\n",
       "--------------\n",
-      "          | Mission1.Climb_GoAround\n",
+      "          | Mission.Climb_GoAround\n",
       "       CL : 2.1              Lift Coefficient | Climb\n",
       "Cd0_climb : 1e-06            Variation in Cd0\n",
       "\n",
-      "          | Aircraft1.Payload\n",
-      "        M : 708      [kg]    Total Payload mass\n",
+      "          | Aircraft\n",
+      "      M_0 : 1557     [kg]    Total Mass\n",
+      "    M_dry : 1144     [kg]    Aircraft Dry Mass\n",
+      "   M_fuel : 100      [kg]    Starting Fuel Mass\n",
+      "    T0_W0 : 0.09482          Design Thrust to Weight ratio\n",
+      "     W0_S : 12.27    [N/m²]  Design Wing Loading\n",
+      "\n",
+      "          | Mission.Climb\n",
+      "       CL : 1.92             Lift Coefficient | Climb\n",
+      "Cd0_climb : 0.00131          Variation in Cd0\n",
+      "\n",
+      "          | Aircraft.Payload\n",
+      "        M : 899.8    [kg]    Total Payload mass\n",
       "M_luggage : 108      [kg]    Total Mass of luggage\n",
       "    M_pax : 600      [kg]    Total Mass of passengers + crew\n",
       "\n",
-      "          | Aircraft1\n",
-      "      M_0 : 808      [kg]    Total Mass\n",
-      "    M_dry : 708      [kg]    Aircraft Dry Mass\n",
-      "   M_fuel : 100      [kg]    Starting Fuel Mass\n",
-      "    T0_W0 : 0.09482          Design Thrust to Weight ratio\n",
-      "     W0_S : 25.18    [N/m²]  Design Wing Loading\n",
-      "\n",
-      "          | Mission1.Climb\n",
-      "       CL : 1.92             Lift Coefficient | Climb\n",
-      "Cd0_climb : 0.00124          Variation in Cd0\n",
-      "\n",
-      "          | Mission1.Takeoff\n",
-      "CL_max_TO : 1.92             Maximum Lift Coefficient\n",
+      "          | Mission.Takeoff\n",
+      "CL_max_TO : 1.92             Maximum Lift Coefficient | Takeoff\n",
       "      TOP : 512.6    [kg/m²] Takeoff Parameter\n",
       "\n",
-      "          | Mission1.Landing\n",
+      "          | Mission.Landing\n",
       "  V_stall : 45.04    [m/s]   Target Stall Speed | Landing\n",
       "\n",
       "Fixed Variables\n",
       "---------------\n",
-      "           | Mission1.Climb_GoAround\n",
+      "           | Mission.Climb_GoAround\n",
       "   e_climb : 0.95             Variation in Oswald efficiency\n",
       "\n",
-      "           | Aircraft1.Payload\n",
+      "           | Aircraft\n",
+      "         g : 9.81    [m/s²]   Gravitational Acceleration\n",
+      "\n",
+      "           | Mission.Climb\n",
+      "   e_climb : 0.95             Variation in Oswald efficiency\n",
+      "\n",
+      "           | Aircraft.Payload\n",
       "         g : 9.81    [m/s²]   Gravitational Acceleration\n",
       " m_luggage : 27      [kg]     Assumed Luggage Weight\n",
       "     m_pax : 100     [kg]     Assumed Passenger Weight\n",
       "\n",
-      "           | Aircraft1\n",
-      "         g : 9.81    [m/s²]   Gravitational Acceleration\n",
-      "\n",
-      "           | Mission1.Climb\n",
-      "   e_climb : 0.95             Variation in Oswald efficiency\n",
-      "\n",
-      "           | Mission1.Takeoff\n",
+      "           | Mission.Takeoff\n",
       "        FL : 1200    [m]      Field Length\n",
       "         g : 9.81    [m/s²]   Gravitational Acceleration\n",
       "         k : 37.5    [ft³/lb] Some Random Constant\n",
       "\n",
-      "           | Mission1.Landing\n",
+      "           | Mission.Landing\n",
       "        FL : 1200    [m]      Field Length | Landing\n",
       "SL_density : 1.225   [kg/m³]  Sea Level Density | Landing\n",
       "         k : 0.5136  [ft/kt²] Landing Empirical Constant\n",
       "\n",
       "Variable Sensitivities\n",
       "----------------------\n",
-      "          | Aircraft1.Payload\n",
-      "    m_pax : +0.74  Assumed Passenger Weight\n",
-      "m_luggage : +0.13  Assumed Luggage Weight\n",
-      "\n",
-      "          | Mission1.Climb_GoAround\n",
-      "  e_climb : -0.99  Variation in Oswald efficiency\n",
+      "        | Mission.Climb_GoAround\n",
+      "e_climb : -0.99  Variation in Oswald efficiency\n",
       "\n",
       "Most Sensitive Constraints\n",
       "--------------------------\n",
-      "       | Aircraft1\n",
-      "    +1 : M_0 ≥ M_fuel + M_dry\n",
-      " +0.88 : M_dry ≥ M\n",
+      "       | Mission\n",
+      "    +1 : M_fuel = 0.0642·M_0\n",
       "\n",
-      "       | Mission1.Climb_GoAround\n",
+      "       | Aircraft\n",
+      "    +1 : M_fuel ≥ 100\n",
+      "\n",
+      "       | Mission.Climb_GoAround\n",
       "    +1 : T0_W0 ≥ (.Cd0_climb + .CL²/(23.6·.e_climb))/.CL + 0.001\n",
       " +0.99 : .CL = 2.1\n",
-      "\n",
-      "       | Aircraft1.Payload\n",
-      " +0.88 : M ≥ M_pax + M_luggage\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "import gpkit\n",
-    "from gpkit import Model, ureg\n",
-    "from gpkit.constraints.bounded import Bounded\n",
-    "from Models import *\n",
-    "\n",
-    "\n",
-    "# with gpkit.SignomialsEnabled():\n",
-    "\n",
-    "#     AC = Aircraft()\n",
-    "#     # print(AC)\n",
-    "\n",
-    "#     MISSION = Mission(AC)\n",
-    "#     # print(MISSION)\n",
-    "\n",
-    "#     M = Model(AC.M_0 * AC.T0_W0, [Bounded(MISSION), Bounded(AC)])\n",
-    "#     print(M)\n",
-    "\n",
-    "#     print(M.variables_byname('AR'))\n",
-    "\n",
-    "#     sol = M.localsolve(verbosity=1)\n",
-    "#     print(sol.table())\n",
-    "\n",
-    "#     print(M.program.results)\n",
     "\n",
     "AC = Aircraft()\n",
     "# print(AC)\n",
@@ -213,10 +238,38 @@
     "M = Model(AC.M_0 * AC.T0_W0, [MISSION, AC])\n",
     "print(M)\n",
     "\n",
-    "print(M.variables_byname('AR'))\n",
-    "\n",
     "sol = M.solve(verbosity=1)\n",
     "print(sol.table())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from gpkit.interactive.references import referencesplot\n",
+    "# referencesplot(M, openimmediately=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<gpkit.interactive.sankey.Sankey at 0x7ff37c158a60>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sankey(sol, M)"
    ]
   }
  ],
