--- a/pyavd/gpkit_test.ipynb
+++ b/pyavd/gpkit_test.ipynb
@@ -63,7 +63,7 @@
       "Constraints\n",
       "-----------\n",
       " Mission\n",
-      "  M_fuel = 0.0642·M_0\n",
+      "  M_fuel/M_0 = 0.0642\n",
       "  Takeoff\n",
       "   \"Takeoff Parameter\":\n",
       "     TOP = Mission.Takeoff.FL/Mission.Takeoff.k\n",
@@ -80,8 +80,10 @@
       "  Climb\n",
       "   \"Initial CL|Climb\":\n",
       "     Mission.Climb.CL = 1.92\n",
+      "   \"Induced Drag Coefficient | Climb\":\n",
+      "     Mission.Climb.CDi_climb = Mission.Climb.CL²/(23.6·Mission.Climb.e_climb)\n",
       "   \"Thrust to Weight constraint\":\n",
-      "     T0_W0 ≥ (Mission.Climb.Cd0_climb + Mission.Climb.CL²/(23.6·Mission.Climb.e_climb))/Mission.Climb.CL + 0.001\n",
+      "     T0_W0 ≥ (Mission.Climb.Cd0_climb + Mission.Climb.CDi_climb)/Mission.Climb.CL + 0.001\n",
       "   \"Boundaries\":\n",
       "     Mission.Climb.Cd0_climb ≥ 1e-06\n",
       "     T0_W0 ≤ 1\n",
@@ -89,8 +91,10 @@
       "  Climb_GoAround\n",
       "   \"Go-around CL|CLimb\":\n",
       "     Mission.Climb_GoAround.CL = 2.1\n",
+      "   \"Induced Drag Coefficient | Climb\":\n",
+      "     Mission.Climb_GoAround.CDi_climb = Mission.Climb_GoAround.CL²/(23.6·Mission.Climb_GoAround.e_climb)\n",
       "   \"Thrust to Weight constraint\":\n",
-      "     T0_W0 ≥ (Mission.Climb_GoAround.Cd0_climb + Mission.Climb_GoAround.CL²/(23.6·Mission.Climb_GoAround.e_climb))/Mission.Climb_GoAround.CL + 0.001\n",
+      "     T0_W0 ≥ (Mission.Climb_GoAround.Cd0_climb + Mission.Climb_GoAround.CDi_climb)/Mission.Climb_GoAround.CL + 0.001\n",
       "   \"Boundaries\":\n",
       "     Mission.Climb_GoAround.Cd0_climb ≥ 1e-06\n",
       "     T0_W0 ≤ 1\n",
@@ -120,9 +124,9 @@
       "   \"Total Payload\":\n",
       "     M ≥ M_pax + M_luggage\n",
       "Using solver 'cvxopt'\n",
-      " for 15 free variables\n",
-      "  in 33 posynomial inequalities.\n",
-      "Solving took 0.0802 seconds.\n",
+      " for 17 free variables\n",
+      "  in 37 posynomial inequalities.\n",
+      "Solving took 0.0881 seconds.\n",
       "\n",
       "Optimal Cost\n",
       "------------\n",
@@ -134,51 +138,53 @@
       "Unexpectedly Loose Constraints\n",
       "------------------------------\n",
       "              | Aircraft\n",
-      "1144 >= 899.8 : M_dry ≥ M\n",
-      " 1557 >= 1244 : M_0 ≥ M_fuel + M_dry\n",
+      "1147 >= 901.2 : M_dry ≥ M\n",
+      " 1557 >= 1247 : M_0 ≥ M_fuel + M_dry\n",
       "\n",
       "              | Aircraft.Payload\n",
-      " 899.8 >= 708 : M ≥ M_pax + M_luggage\n",
+      " 901.2 >= 708 : M ≥ M_pax + M_luggage\n",
       "~~~~~~~~\n",
       "\n",
       "Model Sensitivities (sorts models in sections below)\n",
       "-------------------\n",
-      "  +3.0 : Mission.Climb_GoAround\n",
+      "  +4.0 : Mission.Climb_GoAround\n",
       "  +1.0 : Aircraft\n",
       "       : Mission\n",
       " <1e-9 : Mission.Climb\n",
-      "       : Aircraft.Payload\n",
-      "<1e-10 : Mission.Takeoff\n",
+      "<1e-10 : Aircraft.Payload\n",
+      "       : Mission.Takeoff\n",
       "<1e-11 : Mission.Landing\n",
       "\n",
       "Free Variables\n",
       "--------------\n",
       "          | Mission.Climb_GoAround\n",
-      "       CL : 2.1              Lift Coefficient | Climb\n",
-      "Cd0_climb : 1e-06            Variation in Cd0\n",
+      "CDi_climb : 0.197             Induced Drag Coefficient | Climb\n",
+      "       CL : 2.1               Lift Coefficient | Climb\n",
+      "Cd0_climb : 1e-06             Variation in Cd0\n",
       "\n",
       "          | Aircraft\n",
-      "      M_0 : 1557     [kg]    Total Mass\n",
-      "    M_dry : 1144     [kg]    Aircraft Dry Mass\n",
-      "   M_fuel : 100      [kg]    Starting Fuel Mass\n",
-      "    T0_W0 : 0.09482          Design Thrust to Weight ratio\n",
-      "     W0_S : 12.27    [N/m²]  Design Wing Loading\n",
+      "      M_0 : 1557      [kg]    Total Mass\n",
+      "    M_dry : 1147      [kg]    Aircraft Dry Mass\n",
+      "   M_fuel : 100       [kg]    Starting Fuel Mass\n",
+      "    T0_W0 : 0.09482           Design Thrust to Weight ratio\n",
+      "     W0_S : 6.072     [N/m²]  Design Wing Loading\n",
       "\n",
       "          | Mission.Climb\n",
-      "       CL : 1.92             Lift Coefficient | Climb\n",
-      "Cd0_climb : 0.00131          Variation in Cd0\n",
+      "CDi_climb : 0.1647            Induced Drag Coefficient | Climb\n",
+      "       CL : 1.92              Lift Coefficient | Climb\n",
+      "Cd0_climb : 0.001811          Variation in Cd0\n",
       "\n",
       "          | Aircraft.Payload\n",
-      "        M : 899.8    [kg]    Total Payload mass\n",
-      "M_luggage : 108      [kg]    Total Mass of luggage\n",
-      "    M_pax : 600      [kg]    Total Mass of passengers + crew\n",
+      "        M : 901.2     [kg]    Total Payload mass\n",
+      "M_luggage : 108       [kg]    Total Mass of luggage\n",
+      "    M_pax : 600       [kg]    Total Mass of passengers + crew\n",
       "\n",
       "          | Mission.Takeoff\n",
-      "CL_max_TO : 1.92             Maximum Lift Coefficient | Takeoff\n",
-      "      TOP : 512.6    [kg/m²] Takeoff Parameter\n",
+      "CL_max_TO : 1.92              Maximum Lift Coefficient | Takeoff\n",
+      "      TOP : 512.6     [kg/m²] Takeoff Parameter\n",
       "\n",
       "          | Mission.Landing\n",
-      "  V_stall : 45.04    [m/s]   Target Stall Speed | Landing\n",
+      "  V_stall : 45.04     [m/s]   Target Stall Speed | Landing\n",
       "\n",
       "Fixed Variables\n",
       "---------------\n",
@@ -213,14 +219,15 @@
       "\n",
       "Most Sensitive Constraints\n",
       "--------------------------\n",
-      "       | Mission\n",
-      "    +1 : M_fuel = 0.0642·M_0\n",
-      "\n",
       "       | Aircraft\n",
       "    +1 : M_fuel ≥ 100\n",
       "\n",
+      "       | Mission\n",
+      "    +1 : M_fuel/M_0 = 0.0642\n",
+      "\n",
       "       | Mission.Climb_GoAround\n",
-      "    +1 : T0_W0 ≥ (.Cd0_climb + .CL²/(23.6·.e_climb))/.CL + 0.001\n",
+      "    +1 : T0_W0 ≥ (.Cd0_climb + .CDi_climb)/.CL + 0.001\n",
+      " +0.99 : .CDi_climb = .CL²/(23.6·.e_climb)\n",
       " +0.99 : .CL = 2.1\n",
       "\n"
      ]
@@ -256,18 +263,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<gpkit.interactive.sankey.Sankey at 0x7ff37c158a60>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Sankey(sol, M)"
    ]
