--- a/pyavd/Models/Performance/test.ipynb
+++ b/pyavd/Models/Performance/test.ipynb
@@ -2,60 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Takeoff\n",
-      "=======\n",
-      "\n",
-      "Constraints\n",
-      "-----------\n",
-      "  \"Takeoff Parameter\":\n",
-      "    TOP = FL/k\n",
-      "  \"Lift Coeffcient | Takeoff\":\n",
-      "    CL_max_TO = 1.92\n",
-      "  \"Thrust to Weight constraint\":\n",
-      "    TW = WS/(CL_max_TO·g·TOP/1.21)\n",
-      "Climb\n",
-      "=====\n",
-      "\n",
-      "Constraints\n",
-      "-----------\n",
-      "  \"Initial CL|Climb\":\n",
-      "    CL = 1.92\n",
-      "  \"Drag Coefficient at Climb\":\n",
-      "    CD ≥ Cd0_climb + CL²/(π·AR·e_climb)\n",
-      "  \"Lift-Drag Ratio at Climb\":\n",
-      "    LD = CL/CD\n",
-      "  \"Thrust to Weight constraint\":\n",
-      "    TW ≥ 1/LD + 0.001\n",
-      "Landing\n",
-      "=======\n",
-      "\n",
-      "Constraints\n",
-      "-----------\n",
-      "  \"Target Stall Speed\":\n",
-      "    V_stall = (FL/k)^0.5\n",
-      "  \"Max Wing Loading\":\n",
-      "    WS ≤ 0.5·SL_density·V_stall²·2.1\n"
+     "ename": "SyntaxError",
+     "evalue": "non-default argument follows default argument (Segments.py, line 164)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[1;36m(most recent call last)\u001b[0m:\n",
+      "  File \u001b[0;32m\"C:\\Python\\Python39\\lib\\site-packages\\IPython\\core\\interactiveshell.py\"\u001b[0m, line \u001b[0;32m3444\u001b[0m, in \u001b[0;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\gabis\\AppData\\Local\\Temp/ipykernel_25764/1405527625.py\"\u001b[1;36m, line \u001b[1;32m1\u001b[1;36m, in \u001b[1;35m<module>\u001b[1;36m\u001b[0m\n\u001b[1;33m    from Segments import Takeoff, Climb, Landing, Cruise\u001b[0m\n",
+      "\u001b[1;36m  File \u001b[1;32m\"c:\\Users\\gabis\\Downloads\\Conceptual-Design\\pyavd\\Models\\Performance\\Segments.py\"\u001b[1;36m, line \u001b[1;32m164\u001b[0m\n\u001b[1;33m    def setup(self, aircraft=None, V_inf, alpha1, n=1, alt , climb_rate, sigma,rho):\u001b[0m\n\u001b[1;37m                                          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m non-default argument follows default argument\n"
      ]
     }
    ],
    "source": [
-    "from Segments import Takeoff, Climb, Landing\n",
+    "from Segments import Takeoff, Climb, Landing, Cruise\n",
     "\n",
     "t = Takeoff()\n",
     "c = Climb(0.04, 0.05, 0.1, goAround=False)\n",
     "l = Landing()\n",
+    "cr = Cruise(180,0.8)\n",
     "\n",
     "\n",
     "print(t)\n",
     "print(c)\n",
-    "print(l)\n"
+    "print(l)\n",
+    "print(cr)\n"
    ]
   }
  ],
@@ -78,7 +52,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.2"
   },
   "orig_nbformat": 4
  },
